--- a/sell.html
+++ b/sell.html
@@ -7,28 +7,28 @@
     <script type="module">
         import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
         const auth = getAuth();
-        onAuthStateChanged(auth, (user) => { if (!user) window.location.href = "login.html"; });
+        onAuthStateChanged(auth, (user) => { if (!user) window.location.href = "index.html"; });
     </script>
 </head>
 <body onload="loadSell()">
 
-<div class="app">
 <header>Sell Products</header>
 
-<div class="container">
-    <input id="searchInput" placeholder="Search product..." oninput="suggestNames(this.value, 'searchSuggestions')" style="margin-bottom:12px;">
-    <div id="searchSuggestions" class="suggestions"></div>
-    <div id="sell"></div>
-</div>
+<div class="app">
+    <div class="container">
+        <input id="searchInput" placeholder="Search product..." oninput="suggestNames(this.value, 'searchSuggestions')">
+        <div id="searchSuggestions" class="suggestions"></div>
+        <div id="sell"></div>
+    </div>
 
-<nav>
-    <a href="index.html">📦<span>Stock</span></a>
-    <a href="add-stock.html">➕<span>Add</span></a>
-    <a class="active" href="sell.html">🛒<span>Sell</span></a>
-    <a href="history.html">📜<span>History</span></a>
-</nav>
+    <nav>
+        <a href="index.html">📦<span>Stock</span></a>
+        <a href="add-stock.html">➕<span>Add</span></a>
+        <a class="active" href="sell.html">🛒<span>Sell</span></a>
+        <a href="history.html">📜<span>History</span></a>
+    </nav>
+</div>
 
 <script type="module" src="script.js"></script>
-</div>
 </body>
 </html>
