--- a/login.html
+++ b/login.html
@@ -1,48 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Login</title>
+  <title>Sell</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css">
 </head>
+<body onload="loadSell()">
+  <div class="app">
+    <header>Sell Products</header>
 
-<body>
+    <div class="container">
+      <input id="searchInput" placeholder="Search product..." 
+             oninput="suggestNames(this.value, 'searchSuggestions')">
+      <div id="searchSuggestions" class="suggestions"></div>
+      <div id="sell"></div>
+    </div>
 
-<h2>Login / Register</h2>
+    <nav>
+      <a href="inventory.html">📦<span>Stock</span></a>
+      <a href="add-stock.html">➕<span>Add</span></a>
+      <a class="active" href="sell.html">🛒<span>Sell</span></a>
+      <a href="history.html">📜<span>History</span></a>
+    </nav>
+  </div>
 
-<input id="email" placeholder="Email"><br><br>
-<input id="password" type="password" placeholder="Password"><br><br>
-
-<button onclick="login()">Login</button>
-<button onclick="register()">Register</button>
-
-<script type="module">
-  import { auth } from "./firebase.js";
-  import {
-    signInWithEmailAndPassword,
-    createUserWithEmailAndPassword
-  } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
-
-  window.login = () => {
-    signInWithEmailAndPassword(
-      auth,
-      email.value,
-      password.value
-    )
-    .then(() => window.location.href = "index.html")
-    .catch(e => alert(e.message));
-  };
-
-  window.register = () => {
-    createUserWithEmailAndPassword(
-      auth,
-      email.value,
-      password.value
-    )
-    .then(() => alert("Account created! Now login"))
-    .catch(e => alert(e.message));
-  };
-</script>
-
+  <script type="module">
+    import { auth } from "./firebase.js";
+    import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
+    onAuthStateChanged(auth, user => { if (!user) window.location.href = "index.html"; });
+  </script>
+  <script type="module" src="script.js"></script>
 </body>
 </html>
-
