--- a/sell.html
+++ b/sell.html
@@ -47,6 +47,15 @@
 #stockList small {
   color: #aaa;
 }
+
+#stockList input {
+  color: #fff;
+  background: #2c2c2c;
+  border: none;
+  border-radius: 8px;
+  width: 50px;
+  text-align: center;
+}
 </style>
 </head>
 <body>
@@ -73,23 +82,26 @@
 
 <script src="script.js"></script>
 <script>
-// ==================== SELL PAGE JS ====================
+// ==================== SELL PAGE FIXES ====================
 
 // TEMP QUANTITIES FOR SELLING
-let sellQty = {}; 
+let interval; 
+let currentChange = null;
 
-// POPULATE STOCK LIST
+// POPULATE SELL LIST FIX
 function populateSell(list = stock) {
   const ul = document.getElementById("stockList");
   if (!ul) return;
 
   ul.innerHTML = "";
 
-  // Show only items with quantity > 0
   const filtered = list.filter(item => item.quantity > 0);
 
-  filtered.forEach((item, index) => {
+  filtered.forEach(item => {
     if (sellQty[item.name] === undefined) sellQty[item.name] = 0;
+
+    // Step based on unit
+    const step = (item.unit === "kg" || item.unit === "g") ? 0.1 : 1;
 
     const li = document.createElement("li");
     li.innerHTML = `
@@ -98,9 +110,20 @@ function populateSell(list = stock) {
         <small>Available: ${item.quantity} ${item.unit}</small>
       </div>
       <div style="display:flex; align-items:center; margin-top:10px;">
-        <button class="qty-btn" onmousedown="startChange('${item.name}', -1)" onmouseup="stopChange()" ontouchstart="startChange('${item.name}', -1)" ontouchend="stopChange()">−</button>
-        <span id="sellQty-${item.name}" style="margin:0 10px;">${sellQty[item.name]}</span>
-        <button class="qty-btn" onmousedown="startChange('${item.name}', 1)" onmouseup="stopChange()" ontouchstart="startChange('${item.name}', 1)" ontouchend="stopChange()">+</button>
+        <button class="qty-btn" 
+          onmousedown="startChange('${item.name}', -${step})" 
+          onmouseup="stopChange()" 
+          onmouseleave="stopChange()" 
+          ontouchstart="startChange('${item.name}', -${step})" 
+          ontouchend="stopChange()">−</button>
+        <input id="sellQty-${item.name}" value="${sellQty[item.name]}" 
+          oninput="manualQty('${item.name}', ${item.quantity}, ${step})">
+        <button class="qty-btn" 
+          onmousedown="startChange('${item.name}', ${step})" 
+          onmouseup="stopChange()" 
+          onmouseleave="stopChange()" 
+          ontouchstart="startChange('${item.name}', ${step})" 
+          ontouchend="stopChange()">+</button>
       </div>
       <button class="btn" style="margin-top:10px;" onclick="confirmSell('${item.name}')">Confirm Sell</button>
     `;
@@ -108,22 +131,16 @@ function populateSell(list = stock) {
   });
 }
 
-// SEARCH FUNCTION
-function searchStock() {
-  const input = document.getElementById("searchItem").value.toLowerCase();
-  const filtered = stock.filter(item => item.quantity > 0 && item.name.toLowerCase().includes(input));
-  populateSell(filtered);
-}
-
-// CHANGE QUANTITY WITH LONG PRESS
-let interval;
+// FIXED FUNCTIONS
 function startChange(name, change) {
-  updateQty(name, change);
-  interval = setInterval(() => updateQty(name, change), 200); // hold increase/decrease every 200ms
+  currentChange = {name, change};
+  updateQty(name, change); // single click fix
+  interval = setInterval(() => updateQty(name, change), 200);
 }
 
 function stopChange() {
   clearInterval(interval);
+  currentChange = null;
 }
 
 function updateQty(name, change) {
@@ -131,38 +148,40 @@ function updateQty(name, change) {
   if (!item) return;
 
   let next = (sellQty[name] || 0) + change;
+
+  if (item.unit === "kg" || item.unit === "g") {
+    next = Math.round(next * 10) / 10;
+  } else {
+    next = Math.round(next);
+  }
+
   if (next < 0) next = 0;
   if (next > item.quantity) next = item.quantity;
 
   sellQty[name] = next;
-  document.getElementById(`sellQty-${name}`).textContent = next;
+  const el = document.getElementById(`sellQty-${name}`);
+  if (el) el.value = next;
 }
 
-// CONFIRM SELL
-function confirmSell(name) {
-  const qty = sellQty[name];
-  if (!qty || qty <= 0) return alert("Select quantity to sell");
+// MANUAL INPUT
+function manualQty(name, max, step) {
+  let val = parseFloat(document.getElementById(`sellQty-${name}`).value);
+  if (isNaN(val)) val = 0;
 
   const item = stock.find(i => i.name === name);
   if (!item) return;
 
-  item.quantity -= qty;
+  if (item.unit === "kg" || item.unit === "g") {
+    val = Math.round(val * 10) / 10;
+  } else {
+    val = Math.round(val);
+  }
 
-  history.push({
-    date: new Date().toLocaleString(),
-    product: item.name,
-    quantity: qty,
-    unit: item.unit,
-    type: "Sell"
-  });
+  if (val < 0) val = 0;
+  if (val > item.quantity) val = item.quantity;
 
-  sellQty[name] = 0;
-  saveData();
-  alert(`Sold ${qty} of ${item.name}`);
-
-  populateSell();
-  updateDashboard();
-  populateHistory();
+  sellQty[name] = val;
+  document.getElementById(`sellQty-${name}`).value = val;
 }
 
 // INITIAL POPULATION
