--- a/sell.html
+++ b/sell.html
@@ -74,10 +74,10 @@
 
 <!-- BOTTOM NAV -->
 <div class="bottom-nav">
-  <button onclick="location.href='index.html'">Dashboard</button>
-  <button onclick="location.href='add.html'">Add</button>
-  <button onclick="location.href='sell.html'">Sell</button>
-  <button onclick="location.href='history.html'">History</button>
+  <button onclick="location.href='index.html'">🖥️Home</button>
+  <button onclick="location.href='add.html'">➕ Add</button>
+  <button onclick="location.href='sell.html'">🛒 Sell</button>
+  <button onclick="location.href='history.html'">⌛Stats</button>
 </div>
 
 <script src="script.js"></script>
