--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
 </div>
 
 <div class="bottom-nav">
-  <button onclick="location.href='index.html'">Dashboard</button>
-  <button onclick="location.href='add.html'">Add</button>
-  <button onclick="location.href='sell.html'">Sell</button>
-  <button onclick="location.href='history.html'">History</button>
+  <button onclick="location.href='index.html'">🖥️Home</button>
+  <button onclick="location.href='add.html'">➕ Add</button>
+  <button onclick="location.href='sell.html'">🛒 Sell</button>
+  <button onclick="location.href='history.html'">⌛Stats</button>
 </div>
 
 <script>
@@ -130,6 +130,19 @@ function closePopup() {
 // Initialize
 updateDashboard();
 </script>
+
+<script type="module">
+import { auth } from "./firebase.js";
+import { onAuthStateChanged }
+from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
+
+onAuthStateChanged(auth, (user) => {
+  if (!user) {
+    window.location.href = "login.html";
+  }
+});
+</script>
+
 
 </body>
 </html>
