--- a/sell.html
+++ b/sell.html
@@ -188,5 +188,18 @@ function manualQty(name, max, step) {
 populateSell();
 </script>
 
+<script type="module">
+import { auth } from "./firebase.js";
+import { onAuthStateChanged }
+from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
+
+onAuthStateChanged(auth, (user) => {
+  if (!user) {
+    window.location.href = "login.html";
+  }
+});
+</script>
+
+
 </body>
 </html>
