--- a/history.html
+++ b/history.html
@@ -1,182 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>History</title>
-<link rel="stylesheet" href="style.css">
-<style>
-/* =================== HISTORY PAGE STYLES =================== */
-.history-container {
-  padding: 20px;
-  max-width: 700px;
-  margin: auto;
-  padding-bottom: 150px;
-}
-
-#searchHistory {
-  width: 100%;
-  padding: 12px;
-  border-radius: 12px;
-  border: none;
-  background-color: #2c2c2c;
-  color: #fff;
-  margin-bottom: 15px;
-  font-size: 16px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.4);
-}
-
-#filterType {
-  width: 100%;
-  padding: 12px;
-  border-radius: 12px;
-  border: none;
-  background-color: #2c2c2c;
-  color: #fff;
-  margin-bottom: 20px;
-  font-size: 16px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.4);
-}
-
-#historyList {
-  list-style: none;
-  padding: 0;
-}
-
-#historyList li {
-  background-color: #232323;
-  border-radius: 12px;
-  padding: 15px 20px;
-  margin-bottom: 12px;
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.4);
-  transition: transform 0.2s, box-shadow 0.2s;
-}
-
-#historyList li:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 8px 18px rgba(0,0,0,0.6);
-}
-
-#historyList li strong {
-  font-size: 16px;
-  color: #fff;
-}
-
-#historyList li small {
-  font-size: 14px;
-  color: #aaa;
-}
-</style>
+  <meta charset="UTF-8">
+  <title>History</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div class="shop-nav">My Shop Name</div>
+<div class="shop-nav">📜 History</div>
 
-<div class="history-container">
-
-  <!-- SEARCH -->
-  <input type="text" id="searchHistory" placeholder="Search by product or date..." onkeyup="searchHistory()">
-
-  <!-- FILTER -->
-  <select id="filterType" onchange="filterHistory()">
-    <option value="all">All Records</option>
-    <option value="daily">Today</option>
-    <option value="weekly">This Week</option>
-    <option value="monthly">This Month</option>
-  </select>
-
-  <!-- HISTORY LIST -->
-  <ul id="historyList"></ul>
-
+<div style="padding:15px; max-width:700px; margin:auto;">
+  <ul id="historyList" style="list-style:none; padding:0;"></ul>
 </div>
 
-<!-- BOTTOM NAV -->
-<div class="bottom-nav">
-  <button onclick="location.href='index.html'">🖥️Home</button>
-  <button onclick="location.href='add.html'">➕ Add</button>
-  <button onclick="location.href='sell.html'">🛒 Sell</button>
-  <button onclick="location.href='history.html'">⌛Stats</button>
-</div>
-
-<script src="script.js"></script>
 <script>
-// ==================== HISTORY PAGE JS ====================
-
-// FILTER AND SEARCH HISTORY
-function filterHistory() {
-  const filter = document.getElementById("filterType").value;
-  const search = document.getElementById("searchHistory").value.toLowerCase();
+  const historyData = JSON.parse(localStorage.getItem("history")) || [];
   const list = document.getElementById("historyList");
-  list.innerHTML = "";
 
-  const now = new Date();
-
-  // SORT HISTORY DESCENDING (latest first)
-  const sortedHistory = [...history].sort((a,b) => new Date(b.date) - new Date(a.date));
-
-  sortedHistory
-    .filter(record => {
-      const recDate = new Date(record.date);
-
-      // FILTER BY TIME
-      if (filter === "daily" && recDate.toDateString() !== now.toDateString()) return false;
-      if (filter === "weekly") {
-        const weekAgo = new Date();
-        weekAgo.setDate(now.getDate() - 7);
-        if (recDate < weekAgo) return false;
-      }
-      if (filter === "monthly") {
-        if (recDate.getMonth() !== now.getMonth() || recDate.getFullYear() !== now.getFullYear()) return false;
-      }
-
-      // SEARCH BY PRODUCT OR DATE
-      if (search) {
-        const dateStr = recDate.toLocaleString().toLowerCase();
-        if (!record.product.toLowerCase().includes(search) && !dateStr.includes(search)) return false;
-      }
-
-      return true;
-    })
-    .forEach(record => {
+  if (historyData.length === 0) {
+    list.innerHTML = "<p>No history available</p>";
+  } else {
+    historyData.reverse().forEach(h => {
       const li = document.createElement("li");
+      li.style.marginBottom = "12px";
+
       li.innerHTML = `
-        <strong>${record.product} (${record.type})</strong>
-        <small>Quantity: ${record.quantity} ${record.unit}</small>
-        <small>Date: ${new Date(record.date).toLocaleString()}</small>
+        <strong>${h.type}</strong><br>
+        <small>${h.date}</small><br>
+        <span>${h.totalItems} items × ₹${h.totalAmount}</span>
+        <hr>
       `;
       list.appendChild(li);
     });
-}
-
-// SEARCH BAR FUNCTION
-function searchHistory() {
-  filterHistory();
-}
-
-// REAL-TIME UPDATES EVERY SECOND
-setInterval(() => {
-  filterHistory();
-}, 1000);
-
-// INITIAL POPULATION
-filterHistory();
-</script>
-
-<script type="module">
-import { auth } from "./firebase.js";
-import { onAuthStateChanged }
-from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
-
-onAuthStateChanged(auth, (user) => {
-  if (!user) {
-    window.location.href = "login.html";
   }
-});
 </script>
-
 
 </body>
 </html>
