--- a/sell.html
+++ b/sell.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -63,12 +63,10 @@
 <div class="shop-nav">My Shop Name</div>
 
 <div style="padding:20px; max-width:700px; margin:auto; padding-bottom:200px;">
-
   <input type="text" id="searchItem" class="search-bar"
     placeholder="Search item..." onkeyup="searchStock()">
 
   <ul id="stockList" style="list-style:none; padding:0; margin-top:15px;"></ul>
-
 </div>
 
 <!-- BOTTOM NAV -->
@@ -109,127 +107,6 @@
 </div>
 
 <script src="script.js"></script>
-
-<script>
-/* ================= CART LOGIC ================= */
-
-let cartQty = {};
-let interval;
-
-function populateSell(list = stock) {
-  const ul = document.getElementById("stockList");
-  if (!ul) return;
-
-  ul.innerHTML = "";
-
-  list.filter(i => i.quantity > 0).forEach(item => {
-    const step = (item.unit === "kg" || item.unit === "g") ? 0.1 : 1;
-    if (cartQty[item.name] === undefined) cartQty[item.name] = 0;
-
-    const li = document.createElement("li");
-    li.innerHTML = `
-      <div style="flex:1; flex-direction: column;">
-        <strong>${item.name}</strong>
-        <small>Available: ${item.quantity} ${item.unit}</small>
-      </div>
-
-      <div style="display:flex; align-items:center; margin-top:10px;">
-        <button class="qty-btn"
-          onmousedown="startChange('${item.name}', -${step})"
-          onmouseup="stopChange()" onmouseleave="stopChange()">−</button>
-
-        <input id="qty-${item.name}" value="${cartQty[item.name]}"
-          oninput="manualQty('${item.name}', ${item.quantity})">
-
-        <button class="qty-btn"
-          onmousedown="startChange('${item.name}', ${step})"
-          onmouseup="stopChange()" onmouseleave="stopChange()">+</button>
-      </div>
-
-      <button class="btn" style="margin-top:10px;"
-        onclick="addToCart('${item.name}')">Add to Cart</button>
-    `;
-    ul.appendChild(li);
-  });
-}
-
-function startChange(name, change) {
-  updateQty(name, change);
-  interval = setInterval(() => updateQty(name, change), 200);
-}
-
-function stopChange() {
-  clearInterval(interval);
-}
-
-function updateQty(name, change) {
-  const item = stock.find(i => i.name === name);
-  if (!item) return;
-
-  let next = (cartQty[name] || 0) + change;
-  next = (item.unit === "kg" || item.unit === "g")
-    ? Math.round(next * 10) / 10
-    : Math.round(next);
-
-  if (next < 0) next = 0;
-  if (next > item.quantity) next = item.quantity;
-
-  cartQty[name] = next;
-  document.getElementById(`qty-${name}`).value = next;
-}
-
-function manualQty(name, max) {
-  let val = parseFloat(document.getElementById(`qty-${name}`).value);
-  if (isNaN(val) || val < 0) val = 0;
-  if (val > max) val = max;
-  cartQty[name] = val;
-}
-
-function addToCart(name) {
-  const qty = cartQty[name];
-  if (!qty) return;
-
-  let cart = JSON.parse(localStorage.getItem("cart")) || {};
-  cart[name] = (cart[name] || 0) + qty;
-  localStorage.setItem("cart", JSON.stringify(cart));
-
-  cartQty[name] = 0;
-  document.getElementById(`qty-${name}`).value = 0;
-
-  updateCartBar();
-}
-
-function updateCartBar() {
-  let cart = JSON.parse(localStorage.getItem("cart")) || {};
-  let totalItems = 0;
-  let totalAmount = 0;
-
-  for (let name in cart) {
-    const item = stock.find(i => i.name === name);
-    if (item) {
-      totalItems += cart[name];
-      totalAmount += cart[name] * (item.price || 0);
-    }
-  }
-
-  const bar = document.getElementById("cartBar");
-  const info = document.getElementById("cartInfo");
-
-  if (totalItems > 0) {
-    info.innerText = `${totalItems} items | ₹${totalAmount}`;
-    bar.style.display = "flex";
-  } else {
-    bar.style.display = "none";
-  }
-}
-
-function goToCart() {
-  location.href = "cart.html";
-}
-
-populateSell();
-updateCartBar();
-</script>
 
 <script type="module">
 import { auth } from "./firebase.js";
