--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 <div style="display:flex; flex-wrap:wrap; justify-content: center;">
   <div class="card" onclick="showList('all')">
-    Total Stock<br><span id="totalStock">0</span>
+    Total products<br><span id="totalStock">0</span>
   </div>
   <div class="card" onclick="showList('out')">
     Out of Stock<br><span id="outStock">0</span>
