--- a/add.html
+++ b/add.html
@@ -15,6 +15,14 @@
   <!-- PRODUCT NAME -->
   <input type="text" id="productName" placeholder="Product Name">
 
+  <!-- BARCODE -->
+  <input
+    type="text"
+    id="productBarcode"
+    placeholder="Barcode"
+    style="margin-top:10px;"
+  >
+
   <!-- QUANTITY + UNIT -->
   <div style="display:flex; gap:10px; margin-top:10px;">
     <input type="number" id="productQuantity" placeholder="Quantity">
