--- a/cart.html
+++ b/cart.html
@@ -25,6 +25,12 @@
     </button>
   </div>
 </div>
+<div class="bottom-nav">
+  <button onclick="location.href='index.html'">🖥️Home</button>
+  <button onclick="location.href='add.html'">➕ Add</button>
+  <button onclick="location.href='sell.html'">🛒 Sell</button>
+  <button onclick="location.href='history.html'">⌛Stats</button>
+</div>
 
 <script src="script.js"></script>
 <script>
