--- a/cart.html
+++ b/cart.html
@@ -12,10 +12,13 @@
 
 <div style="padding:15px; max-width:700px; margin:auto;">
   <button class="btn" style="margin-bottom:15px;" onclick="goBack()">← Back</button>
+
   <ul id="cartList" style="list-style:none; padding:0;"></ul>
+
   <div id="emptyCart" style="text-align:center; margin-top:40px; display:none;">
     <strong>Cart is empty</strong>
   </div>
+
   <div id="cartSummary" style="margin-top:20px; display:none;">
     <hr />
     <h3>Total Items: <span id="totalItems">0</span></h3>
@@ -25,6 +28,7 @@
     </button>
   </div>
 </div>
+
 <div class="bottom-nav">
   <button onclick="location.href='index.html'">🖥️Home</button>
   <button onclick="location.href='add.html'">➕ Add</button>
@@ -37,6 +41,121 @@
   function goBack() {
     window.location.href = "sell.html";
   }
+
+  // ================================
+  // CART PAGE LOGIC
+  // ================================
+  function renderCartPage() {
+    const list = document.getElementById("cartList");
+    const empty = document.getElementById("emptyCart");
+    const summary = document.getElementById("cartSummary");
+    if (!list || !empty || !summary) return;
+
+    const currentCart = JSON.parse(localStorage.getItem("cart")) || {};
+    const itemKeys = Object.keys(currentCart);
+
+    list.innerHTML = "";
+
+    if (itemKeys.length === 0) {
+      empty.style.display = "block";
+      summary.style.display = "none";
+      return;
+    }
+
+    empty.style.display = "none";
+    summary.style.display = "block";
+
+    let totalItems = 0;
+    let totalAmount = 0;
+
+    itemKeys.forEach(name => {
+      const data = currentCart[name];
+      const amount = data.qty * data.price;
+
+      totalItems += data.qty;
+      totalAmount += amount;
+
+      const li = document.createElement("li");
+      li.style.background = "#232323";
+      li.style.padding = "12px";
+      li.style.borderRadius = "12px";
+      li.style.marginBottom = "10px";
+
+      li.innerHTML = `
+        <strong>${name}</strong>
+        <div style="display:flex; justify-content:space-between; margin-top:5px;">
+          <span>₹${data.price} × ${data.qty} ${data.unit}</span>
+          <span>₹${amount}</span>
+        </div>
+        <div style="display:flex; gap:6px; margin-top:8px; align-items:center;">
+          <button class="qty-btn" onclick="changeCartQty('${name}', -1)">−</button>
+          <span>${data.qty}</span>
+          <button class="qty-btn" onclick="changeCartQty('${name}', 1)">+</button>
+          <button class="btn" style="background:#ff4d4d; margin-left:auto;" onclick="removeCartItem('${name}')">Remove</button>
+        </div>
+      `;
+      list.appendChild(li);
+    });
+
+    document.getElementById("totalItems").innerText = totalItems;
+    document.getElementById("totalAmount").innerText = totalAmount;
+  }
+
+  function changeCartQty(name, change) {
+    const currentCart = JSON.parse(localStorage.getItem("cart")) || {};
+    if (!currentCart[name]) return;
+
+    currentCart[name].qty += change;
+    if (currentCart[name].qty <= 0) delete currentCart[name];
+
+    localStorage.setItem("cart", JSON.stringify(currentCart));
+    renderCartPage();
+    updateCartBar();
+  }
+
+  function removeCartItem(name) {
+    const currentCart = JSON.parse(localStorage.getItem("cart")) || {};
+    delete currentCart[name];
+    localStorage.setItem("cart", JSON.stringify(currentCart));
+    renderCartPage();
+    updateCartBar();
+  }
+
+  function checkoutCart() {
+    const currentCart = JSON.parse(localStorage.getItem("cart")) || {};
+    if (Object.keys(currentCart).length === 0) return;
+
+    let totalItems = 0;
+    let totalAmount = 0;
+
+    Object.keys(currentCart).forEach(name => {
+      const data = currentCart[name];
+      const item = stock.find(i => i.name === name);
+      if (!item) return;
+
+      item.quantity -= data.qty;
+      totalItems += data.qty;
+      totalAmount += data.qty * data.price;
+    });
+
+    history.push({
+      date: new Date().toLocaleString(),
+      items: currentCart,
+      totalItems,
+      totalAmount,
+      type: "Cart Sell"
+    });
+
+    localStorage.removeItem("cart");
+    localStorage.setItem("stock", JSON.stringify(stock));
+    localStorage.setItem("history", JSON.stringify(history));
+
+    renderCartPage();
+    updateCartBar();
+    alert("Payment marked as paid ✔");
+  }
+
+  renderCartPage();
 </script>
 
 </body>
