--- a/sell.html
+++ b/sell.html
@@ -66,22 +66,6 @@
   background-color: #00a862;
 }
 
-/* EDIT BUTTON */
-.edit-btn {
-  background: #444;
-  color: #fff;
-  border: none;
-  padding: 6px 10px;
-  border-radius: 8px;
-  font-size: 12px;
-  cursor: pointer;
-}
-
-.edit-btn:hover {
-  background: #ff9800;
-  color: #000;
-}
-
 #stockList small {
   color: #aaa;
 }
@@ -94,8 +78,24 @@
 
 <div style="padding:20px; max-width:700px; margin:auto; padding-bottom:200px;">
 
-  <input type="text" id="searchItem" class="search-bar"
-    placeholder="Search item..." onkeyup="searchStock()">
+  <!-- 📷 BARCODE SCAN INPUT (RESTORED) -->
+  <input
+    type="text"
+    id="barcodeInput"
+    class="search-bar"
+    placeholder="Scan barcode..."
+    autocomplete="off"
+    style="margin-bottom:10px;"
+  >
+
+  <!-- 🔍 SEARCH INPUT -->
+  <input
+    type="text"
+    id="searchItem"
+    class="search-bar"
+    placeholder="Search item..."
+    onkeyup="searchStock()"
+  >
 
   <ul id="stockList" style="list-style:none; padding:0; margin-top:15px;"></ul>
 </div>
