--- a/sell.html
+++ b/sell.html
@@ -16,58 +16,41 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  flex-wrap: nowrap;
-  position: relative;
+  gap: 10px;
+  flex-wrap: wrap;
 }
 
-#stockList li > div:first-child {
+#stockList li .item-info {
   flex: 1;
-  min-width: 0;
+  min-width: 0;  /* allows shrinking for ellipsis */
 }
 
-#stockList strong {
-  font-size: 18px;
+#stockList li .item-info strong {
+  display: block;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  font-size: 18px;
 }
 
-/* TOOLTIP */
-#stockList strong:hover::after {
-  content: attr(title);
-  white-space: normal;
-  background: #2c2c2c;
-  color: #fff;
-  padding: 4px 8px;
-  border-radius: 6px;
-  position: absolute;
-  top: -5px;
-  left: 0;
-  z-index: 1000;
+#stockList li .item-info small {
+  color: #aaa;
 }
 
-#stockList li div {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-
-.qty-btn {
-  background-color: #2c2c2c;
+/* EDIT BUTTON */
+.edit-btn {
+  background: #444;
   color: #fff;
   border: none;
-  border-radius: 12px;
-  font-size: 20px;
-  padding: 10px 15px;
+  padding: 4px 8px;
+  border-radius: 6px;
+  font-size: 12px;
   cursor: pointer;
 }
 
-.qty-btn:hover {
-  background-color: #00a862;
-}
-
-#stockList small {
-  color: #aaa;
+.edit-btn:hover {
+  background: #ff9800;
+  color: #000;
 }
 </style>
 </head>
@@ -78,7 +61,7 @@
 
 <div style="padding:20px; max-width:700px; margin:auto; padding-bottom:200px;">
 
-  <!-- 📷 BARCODE SCAN INPUT (RESTORED) -->
+  <!-- BARCODE SCAN INPUT -->
   <input
     type="text"
     id="barcodeInput"
@@ -88,7 +71,7 @@
     style="margin-bottom:10px;"
   >
 
-  <!-- 🔍 SEARCH INPUT -->
+  <!-- SEARCH BAR -->
   <input
     type="text"
     id="searchItem"
@@ -124,11 +107,29 @@
   justify-content: space-between;
   align-items: center;
   font-weight: bold;
+  z-index: 1000;
 ">
   <span id="cartInfo">0 items | ₹0</span>
-  <button onclick="goToCart()">View Cart</button>
+  <button onclick="goToCart()" style="
+    background:#000;
+    color:#00a862;
+    border:none;
+    padding:6px 12px;
+    border-radius:8px;
+    cursor:pointer;
+  ">View Cart</button>
 </div>
 
 <script src="script.js"></script>
+
+<script type="module">
+import { auth } from "./firebase.js";
+import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
+
+onAuthStateChanged(auth, (user) => {
+  if (!user) window.location.href = "login.html";
+});
+</script>
+
 </body>
 </html>
