email clous storage added

--- a/add.html
+++ b/add.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<div class="shop-nav">My Shop Name</div>
+<div class="shop-nav">STOCK MANAGEMENT</div>
 
 <div style="padding: 20px; max-width:500px; margin:auto;">
 
