--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </head>
 <body>
 
-<div class="shop-nav">SHOP NAME</div>
+<div class="shop-nav">STOCK MANAGEMENT</div>
 
 <div style="display:flex; flex-wrap:wrap; justify-content: center;">
   <div class="card" onclick="showList('all')">
