--- a/sell.html
+++ b/sell.html
@@ -57,7 +57,7 @@
 
 <body>
 
-<div class="shop-nav">My Shop Name</div>
+<div class="shop-nav">STOCK MANAGEMENT</div>
 
 <div style="padding:20px; max-width:700px; margin:auto; padding-bottom:200px;">
 
