--- a/stock-list.html
+++ b/stock-list.html
@@ -13,7 +13,7 @@
   <button onclick="history.back()" class="btn" style="width:auto; padding:8px 14px;">
     ⬅ Back
   </button>
-  <span style="flex:1; text-align:center;">Stock List</span>
+  <span style="flex:1; text-align:center;">Stock MANAFEMENT</span>
 </div>
 
 <!-- CONTENT -->
