--- a/stock-list.html
+++ b/stock-list.html
@@ -41,7 +41,7 @@
   <button onclick="location.href='history.html'">⌛Stats</button>
 </div>
 
-<script src="script.js"></script>
+<script type="module" src="script.js"></script>
 <script>
   renderFilteredStock();
 </script>
